Separated tabsApi, almost solved toggle/delete visuals, added favicon, word wrap, and toggle button.

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 path {
   fill: none;
   stroke: #ccc;
+  stroke-opacity: 1;
 }
 
 text {
